--- a/CutAndCross1/CutAndCross1/CutAndCross1-Info.plist
+++ b/CutAndCross1/CutAndCross1/CutAndCross1-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.impinge.CutAndCross</string>
+	<string>com.gauravsumit.cutcross</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
