--- a/CutAndCross1/CutAndCross1/Levels Info/Level1_Info.plist
+++ b/CutAndCross1/CutAndCross1/Levels Info/Level1_Info.plist
@@ -354,7 +354,7 @@
 			<array>
 				<integer>3</integer>
 				<integer>7</integer>
-				<string>11</string>
+				<integer>11</integer>
 			</array>
 		</dict>
 	</array>
